--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bbycasrepackage",
   "version": "1.0.0",
   "description": "Creating json package for the build as it was missing",
-  "main": "bestbuy.ca.js",
+  "main": "routes.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
